--- a/stagepipeline/Jenkinsfile
+++ b/stagepipeline/Jenkinsfile
@@ -17,6 +17,10 @@ pipeline{
         NEXUS_LOGIN = 'nexus-id'
         SONARSERVER = 'sonar'
         SONARSCANNER ='sonarscan'
+        registryCredential = 'ecr:us-east-1:aws-cred'
+        appRegistry = '561370721395.dkr.ecr.us-east-1.amazonaws.com/tynyone'
+        tynyregistry = 'https://561370721395.dkr.ecr.us-east-1.amazonaws.com'
+
 
     }    
 
@@ -90,6 +94,26 @@ pipeline{
                              type: 'war']
         ]
      )
+                }
+            }
+
+            stage("build app image"){
+                steps {
+                    script {
+        
+                        dockerImage = docker.build( appRegistry + ":$BUILD_NUMBER","./Docker-file/app/multistage/")
+                    }
+                }
+            }
+
+            stage("upload app image"){
+                steps {
+                    script{
+                        docker.withRegistry( vprofileRegistry, registryCredential ) {
+                            dockerImage.push("$BUILD_NUMBER")
+                            dockerImage.push('latest')
+                        }
+                    }
                 }
             }
 
