--- a/stagepipeline/Jenkinsfile
+++ b/stagepipeline/Jenkinsfile
@@ -109,7 +109,7 @@ pipeline{
             stage("upload app image"){
                 steps {
                     script{
-                        docker.withRegistry( vprofileRegistry, registryCredential ) {
+                        docker.withRegistry( tynyregistry, registryCredential ) {
                             dockerImage.push("$BUILD_NUMBER")
                             dockerImage.push('latest')
                         }
